[package]
name = "advent_of_code_2025"
version = "0.1.0"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]
edition = "2024"

[dependencies]
itertools = "0.14.0"
scan_fmt = "0.2.6"
ndarray = "0.17.1"
aoc-utils = { path = "../aoc-utils" }

[profile.dev]
opt-level = 3
lto = "thin"

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

match-bool = "allow"
cast-lossless = "allow"
cast_possible_truncation = "allow"
explicit-iter-loop = "allow"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
match-same-arms = "allow"
single-match-else = "allow"
