[package]
name = "aoc-utils"
version = "0.1.0"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]
edition = "2024"

[dependencies]
itertools = "0.14.0"
ndarray = "0.17.1"

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
